--- a/luqman-portfolio/src/App.scss
+++ b/luqman-portfolio/src/App.scss
@@ -8,10 +8,12 @@
 }
 
 
-html,
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   background: #2c2c2c;
-  scroll-behavior: smooth;
   font-family: "Poppins SemiBold";
 }
 
@@ -204,7 +206,8 @@ nav .nav-links ul li img {
   top: 0;
   left: 0;
   background-color: transparent;
-  overflow-x: hidden;
+  clear: both;
+  display: inline-block;
   mix-blend-mode: difference;
 }
 
