--- a/src/index.scss
+++ b/src/index.scss
@@ -1,12 +1,13 @@
 * {
   box-sizing: border-box;
   ::selection {
-    background: red;
+    background: rgb(255, 255, 255);
   }
 }
 
 html {
   scroll-behavior: smooth;
+  overflow: hidden;
 }
 
 body {
@@ -96,6 +97,39 @@ a {
   }
 }
 
+@-webkit-keyframes AnimationName {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+@-moz-keyframes AnimationName {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+@keyframes AnimationName {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
 .purple {
   color: purple;
 }
@@ -228,5 +262,4 @@ nav .nav-links ul li img {
 iframe {
   float: right;
   width: 70%;
-  margin-top: 50px;
 }
