--- a/src/index.scss
+++ b/src/index.scss
@@ -21,7 +21,6 @@ a {
 
 #container {
   perspective: 100px;
-  height: 100vh;
   overflow-x: hidden;
   overflow-y: auto;
   position: absolute;
@@ -79,21 +78,13 @@ a {
   top: 100%;
   left: 0;
   right: 0;
-  height: 100vh;
+  height: 80vh;
   z-index: 30;
   text-align: center;
 
   h1 {
+    margin-top: 15%;
     color: #2c2c2c;
-    width: 50px;
-    height: 50px;
-    /* Center vertically and horizontally */
-    position: absolute;
-    top: 50%;
-    left: 10%;
-    margin: -25px 70px 0 -25px;
-    writing-mode: vertical-lr;
-    text-orientation: mixed;
   }
 }
 
@@ -140,6 +131,7 @@ a {
 }
 
 #name_title {
+  font-size: 40px;
   font-family: "Federant";
   letter-spacing: 1px;
   color: #fff;
@@ -180,12 +172,6 @@ nav {
   align-items: center;
   padding: 30px 30px;
   mix-blend-mode: exclusion;
-  mask: linear-gradient(black 7rem, transparent);
-  -webkit-mask: linear-gradient(black 7rem, transparent);
-  backdrop-filter: blur(8px);
-  -webkit-backdrop-filter: blur(8px);
-  pointer-events: none;
-  touch-action: none;
 }
 
 nav .nav-links ul {
@@ -260,6 +246,61 @@ nav .nav-links ul li img {
 }
 
 iframe {
+  margin-top: 20%;
   float: right;
   width: 70%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+}
+
+#effect #inner {
+  background-size: cover;
+  -webkit-filter: blur(20px) brightness(85%);
+  width: 100%;
+  position: absolute;
+  clip: rect(0, 2000px, 450px, 0);
+}
+#effect {
+  background: #d6d6d6;
+  width: 100%;
+  margin-top: 10%;
+  top: -10%;
+  left: -0%;
+  position: absolute;
+  border-bottom: 10px solid purple;
+}
+#effect:after {
+  z-index: 200;
+  content: "";
+  width: 0;
+  position: absolute;
+  height: 0;
+  border-style: solid;
+  border-width: 120px 73px 0 73px;
+  border-color: purple transparent transparent transparent;
+  bottom: -120px;
+  left: 0;
+  right: 0;
+  margin-left: auto;
+  margin-right: auto;
+}
+#effect:before {
+  z-index: 300;
+  content: "";
+  width: 0;
+  position: absolute;
+  height: 0;
+  border-style: solid;
+  border-width: 96px 58px 0 58px;
+  border-color: #d6d6d6 transparent transparent transparent;
+  bottom: -96px;
+  left: 0;
+  right: 0;
+  margin-left: auto;
+  margin-right: auto;
 }
