--- a/src/index.scss
+++ b/src/index.scss
@@ -7,7 +7,6 @@
 
 html {
   scroll-behavior: smooth;
-  overflow: hidden;
 }
 
 body {
@@ -19,7 +18,7 @@ a {
   color: white;
 }
 
-#container {
+#background {
   perspective: 100px;
   overflow-x: hidden;
   overflow-y: auto;
@@ -78,13 +77,44 @@ a {
   top: 100%;
   left: 0;
   right: 0;
-  height: 80vh;
+  padding-left: 5%;
+  padding-top: 5%;
+  padding-right: 5%;
+  height: fit-content;
   z-index: 30;
   text-align: center;
+}
 
-  h1 {
-    margin-top: 15%;
-    color: #2c2c2c;
+.column-2 {
+  color: #d6d6d6;
+  float: left;
+  width: 45%;
+  padding: 40px;
+  padding-left: 70px;
+  padding-right: 70px;
+  margin: 30px;
+  margin-right: 30px;
+  margin-left: 100px;
+  background: linear-gradient(-45deg, #270c25, #e73c7e, #00c573, #007038);
+  background-size: 400% 400%;
+  animation: gradient 15s ease infinite;
+  line-height: 2;
+  border-radius: 200px;
+
+  p {
+    mix-blend-mode: normal;
+  }
+}
+
+@keyframes gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
   }
 }
 
@@ -131,7 +161,7 @@ a {
 }
 
 #name_title {
-  font-size: 40px;
+  font-size: 30px;
   font-family: "Federant";
   letter-spacing: 1px;
   color: #fff;
@@ -245,10 +275,14 @@ nav .nav-links ul li img {
   }
 }
 
-iframe {
-  margin-top: 20%;
-  float: right;
-  width: 70%;
+.container1 {
+  position: relative;
+  width: 100%;
+  overflow: hidden;
+  padding-top: 56.25%; /* 16:9 Aspect Ratio */
+}
+
+.responsive-iframe {
   position: absolute;
   top: 0;
   left: 0;
@@ -256,51 +290,147 @@ iframe {
   right: 0;
   width: 100%;
   height: 100%;
+  border: none;
 }
 
-#effect #inner {
-  background-size: cover;
-  -webkit-filter: blur(20px) brightness(85%);
+// Base Divider class
+.divider {
+  display: flex;
+
+  &:before,
+  &:after {
+    content: "";
+    flex: 1;
+  }
+}
+
+// Base line
+.line {
+  align-items: center;
+  margin: 1em -1em;
+  color: #2c2c2c;
+  &:before,
+  &:after {
+    height: 1px;
+    margin: 0 1em;
+  }
+}
+
+.glow {
+  &:before,
+  &:after {
+    height: 6px;
+    border-radius: 10px;
+  }
+
+  &:before {
+    background: #3a3a3a;
+  }
+
+  &:after {
+    background: purple;
+  }
+}
+
+.container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
   width: 100%;
-  position: absolute;
-  clip: rect(0, 2000px, 450px, 0);
+
+  overflow: hidden;
+
+  &__image {
+    position: relative;
+    display: flex;
+
+    flex-direction: column;
+    justify-content: center;
+    width: 250px;
+    height: 250px;
+
+    border-radius: 50%;
+    background-image: url("https://silviadiaconescu.com/work/landscape/pb-2.jpg");
+    background-size: cover;
+    transition: ease-in-out 0.3s;
+
+    z-index: 2;
+    &:before {
+      content: " ";
+      position: absolute;
+
+      width: 100%;
+      height: 100%;
+      top: 0;
+      bottom: 0;
+      left: 0;
+      margin: auto;
+
+      background: inherit;
+      background-position: bottom;
+      transform: scaleX(0.4);
+      transition: ease-in-out 0.4s;
+      border-radius: 120px;
+      transform-origin: right;
+      opacity: 0;
+
+      z-index: -1;
+    }
+    .container__info {
+      position: relative;
+      padding: 8%;
+      line-height: 1.8;
+      transition: ease-in-out 0.3s;
+      opacity: 0;
+      background: linear-gradient(-45deg, #270c25, #e73c7e, #00c573, #007038);
+      background-size: 400% 400%;
+      animation: gradient 15s ease infinite;
+      line-height: 2;
+      border-radius: 500px;
+
+      p {
+        mix-blend-mode: normal;
+      }
+    }
+    .container__location {
+      transition-delay: 0.15s;
+    }
+    &:hover {
+      border-radius: 0;
+      width: 450px;
+      height: 310px;
+
+      box-shadow: 0px 0px 1px rgba(0, 0, 0, 0.04),
+        0px 2px 6px rgba(9, 55, 53, 0.08), 0px 16px 24px rgba(9, 55, 53, 0.1),
+        0px 24px 32px rgba(9, 55, 53, 0.14);
+
+      .container__info {
+        transform: translate3d(-60%, 0px, 0px);
+        opacity: 1;
+      }
+    }
+  }
 }
-#effect {
-  background: #d6d6d6;
-  width: 100%;
-  margin-top: 10%;
-  top: -10%;
-  left: -0%;
-  position: absolute;
-  border-bottom: 10px solid purple;
+.link {
+  border-bottom: 1px solid transparent;
+  color: #06c0a8;
+  text-decoration: none;
+  transition: ease-in 0.13s;
+  &:hover {
+    background-color: #06c0a8;
+    color: #ffffff;
+  }
 }
-#effect:after {
-  z-index: 200;
-  content: "";
-  width: 0;
-  position: absolute;
-  height: 0;
-  border-style: solid;
-  border-width: 120px 73px 0 73px;
-  border-color: purple transparent transparent transparent;
-  bottom: -120px;
-  left: 0;
-  right: 0;
-  margin-left: auto;
-  margin-right: auto;
-}
-#effect:before {
-  z-index: 300;
-  content: "";
-  width: 0;
-  position: absolute;
-  height: 0;
-  border-style: solid;
-  border-width: 96px 58px 0 58px;
-  border-color: #d6d6d6 transparent transparent transparent;
-  bottom: -96px;
-  left: 0;
-  right: 0;
-  margin-left: auto;
-  margin-right: auto;
+
+@keyframes gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
 }
