Updated Color to a more Water and Earth like look. And added Glow to Triangle Mountan SVG

--- a/src/index.scss
+++ b/src/index.scss
@@ -54,6 +54,7 @@ a {
   display: block;
   position: absolute;
   bottom: 0;
+  filter: drop-shadow(0px 0px 10px rgb(158, 255, 215));
 }
 
 #layer6 {
@@ -151,7 +152,7 @@ a {
   }
 }
 .purple {
-  color: purple;
+  color: #755139ff;
 }
 
 @font-face {
@@ -169,12 +170,12 @@ a {
 
 #name_title:before {
   content: attr(data-heading);
-  color: #2ec272;
+  color: #adefd1ff;
   animation: flicker 5s linear infinite;
 }
 
 #red {
-  color: #2ec272;
+  color: #adefd1ff;
 }
 
 .header {
@@ -261,7 +262,7 @@ nav .nav-links ul li img {
   70%,
   100% {
     opacity: 0.99;
-    text-shadow: 0 0 5px #2ec272;
+    text-shadow: 0 0 5px #233142;
   }
   20%,
   21.999%,
@@ -327,7 +328,7 @@ nav .nav-links ul li img {
   }
 
   &:after {
-    background: purple;
+    background: #755139ff;
   }
 }
 
@@ -382,13 +383,14 @@ nav .nav-links ul li img {
       line-height: 1.8;
       transition: ease-in-out 0.3s;
       opacity: 0;
-      background: linear-gradient(-45deg, #270c25, #e73c7e, #00c573, #007038);
+      background: linear-gradient(-45deg, #00aca3, #aaffed, #755139ff);
       background-size: 400% 400%;
       animation: gradient 15s ease infinite;
       line-height: 2;
       border-radius: 500px;
 
       p {
+        color: #424242;
         mix-blend-mode: normal;
       }
     }
@@ -417,7 +419,7 @@ nav .nav-links ul li img {
   text-decoration: none;
   transition: ease-in 0.13s;
   &:hover {
-    background-color: #06c0a8;
+    background-color: #adefd1ff;
     color: #ffffff;
   }
 }
