--- a/src/index.scss
+++ b/src/index.scss
@@ -507,3 +507,47 @@ $transition: 0.3s ease-out all;
     }
   }
 }
+
+.icon-scroll,
+.icon-scroll:before {
+  filter: drop-shadow(0px 0px 10px $brown);
+
+  position: absolute;
+  left: 50%;
+}
+.icon-scroll {
+  filter: drop-shadow(0px 0px 10px $brown);
+
+  width: 40px;
+  height: 70px;
+  margin-left: -20px;
+  top: 80%;
+  margin-top: -35px;
+  box-shadow: inset 0 0 0 1px $brown;
+  border-radius: 25px;
+  &:before {
+    filter: drop-shadow(0px 0px 10px $brown);
+    content: "";
+    width: 8px;
+    height: 8px;
+    background: $brown;
+    margin-left: -4px;
+    top: 8px;
+    border-radius: 4px;
+    animation-duration: 1.5s;
+    animation-iteration-count: infinite;
+    animation-name: scroll;
+  }
+}
+
+@keyframes scroll {
+  from {
+    top: 5px;
+  }
+  to {
+    top: 18px;
+  }
+  100% {
+    opacity: 0;
+  }
+}
