Added Poppins Font

--- a/src/index.scss
+++ b/src/index.scss
@@ -122,6 +122,12 @@ a {
   src: url("./fonts/Federant.ttf");
 }
 
+
+@font-face {
+  font-family: "Poppins SemiBold";
+  src: url("./fonts/Poppins-SemiBold.ttf");
+}
+
 #name_title {
   font-size: 30px;
   font-family: "Federant";
