--- a/src/index.scss
+++ b/src/index.scss
@@ -1,8 +1,11 @@
 $base: #0f1923;
 $white: #ece8e1;
-$pink: #ff4655;
+$pink: hsl(354, 42%, 80%);
 $blue: #adefd1ff;
 $brown: #755139ff;
+$green: #7ceaa4;
+$purple: #3b3d54;
+
 $height: 54px;
 
 * {
@@ -35,6 +38,13 @@ a {
   right: 0;
   bottom: 0;
   margin-left: -00px;
+  text-rendering: optimizeLegibility;
+  font-smooth: always;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  background-color: #2c2c2c;
+  font-size: 14px;
+
 }
 
 #layer1 {
@@ -555,5 +565,36 @@ $transition: 0.3s ease-out all;
   }
   100% {
     opacity: 0;
+  }
+}
+
+.svg{
+  stroke-width: 20;
+  stroke: $blue;
+  stroke-linejoin: round;
+  stroke-linecap:round;
+  position:absolute;
+  bottom: -100vh;
+  transform-style: preserve-3d;
+}
+
+$total: 10;
+@for $i from 1 through $total {
+  $scale:random(2) - .4;
+  
+  .svg:nth-child(#{$i}){
+    left:random(120) * 1% - 20;
+    animation: raise#{$i} 6 + random(15) +s linear infinite;
+    animation-delay:random(5) - 5 + s;
+    transform: scale(.3 * $i - .6) rotate(random(360) + deg);
+    z-index: $i - 7;
+    filter: blur($i - 6 + px);
+
+    @keyframes raise#{$i} {
+      to{
+       bottom:150vh;
+       transform: scale(.3 * $i - .6) rotate(random(360) + deg);
+      }
+    }
   }
 }
