--- a/src/index.scss
+++ b/src/index.scss
@@ -1,9 +1,10 @@
 $base: #0f1923;
 $white: #ece8e1;
 $pink: hsl(354, 42%, 80%);
-$blue: #adefd1ff;
+$blue: #f27405;
 $brown: #755139ff;
-$green: #7ceaa4;
+$green: #ea7c7c;
+
 $purple: #3b3d54;
 
 $height: 54px;
@@ -44,7 +45,6 @@ a {
   -moz-osx-font-smoothing: grayscale;
   background-color: #2c2c2c;
   font-size: 14px;
-
 }
 
 #layer1 {
@@ -58,7 +58,7 @@ a {
 }
 
 .layer {
-  animation: bounceInDown 2s ease 0s 1 normal forwards;
+  animation: fadeInUp 2s ease 0s 1 normal forwards;
 
   position: absolute;
   right: 0;
@@ -71,7 +71,7 @@ a {
   display: block;
   position: absolute;
   bottom: 0;
-  filter: drop-shadow(0px 0px 10px rgb(158, 255, 215));
+  filter: drop-shadow(0px 0px 10px $blue);
 }
 
 #layer6 {
@@ -94,9 +94,7 @@ a {
   top: 100%;
   left: 0;
   right: 0;
-  padding-left: 5%;
   padding-top: 5%;
-  padding-right: 5%;
   height: fit-content;
   z-index: 30;
   text-align: center;
@@ -132,7 +130,6 @@ a {
   src: url("./fonts/Federant.ttf");
 }
 
-
 @font-face {
   font-family: "Poppins SemiBold";
   src: url("./fonts/Poppins-SemiBold.ttf");
@@ -148,12 +145,12 @@ a {
 
 #name_title:before {
   content: attr(data-heading);
-  color: #adefd1ff;
+  color: $blue;
   animation: flicker 5s linear infinite;
 }
 
 #red {
-  color: #adefd1ff;
+  color: $blue;
 }
 
 .header {
@@ -274,7 +271,7 @@ nav .nav-links ul li img {
 // Base Divider class
 .divider {
   display: flex;
-
+  font-size: "100px";
   &:before,
   &:after {
     content: "";
@@ -418,7 +415,7 @@ nav .nav-links ul li img {
 
 $transition: 0.3s ease-out all;
 
-#cv-div {
+.button {
   display: flex;
   height: 20vh;
   align-items: center;
@@ -568,33 +565,208 @@ $transition: 0.3s ease-out all;
   }
 }
 
-.svg{
+.svg {
   stroke-width: 20;
   stroke: $blue;
   stroke-linejoin: round;
-  stroke-linecap:round;
-  position:absolute;
+  stroke-linecap: round;
+  position: absolute;
   bottom: -100vh;
   transform-style: preserve-3d;
 }
 
 $total: 10;
 @for $i from 1 through $total {
-  $scale:random(2) - .4;
-  
-  .svg:nth-child(#{$i}){
-    left:random(120) * 1% - 20;
-    animation: raise#{$i} 6 + random(15) +s linear infinite;
-    animation-delay:random(5) - 5 + s;
-    transform: scale(.3 * $i - .6) rotate(random(360) + deg);
+  $scale: random(2) - 0.4;
+
+  .svg:nth-child(#{$i}) {
+    left: random(120) * 1% - 20;
+    animation: raise#{$i} 6 + random(15) + s linear infinite;
+    animation-delay: random(5) - 5 + s;
+    transform: scale(0.3 * $i - 0.6) rotate(random(360) + deg);
     z-index: $i - 7;
     filter: blur($i - 6 + px);
 
     @keyframes raise#{$i} {
-      to{
-       bottom:150vh;
-       transform: scale(.3 * $i - .6) rotate(random(360) + deg);
+      to {
+        bottom: 150vh;
+        transform: scale(0.3 * $i - 0.6) rotate(random(360) + deg);
       }
     }
+  }
+}
+
+.footer-distributed {
+  background-color: #292c2f;
+  box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
+  box-sizing: border-box;
+  width: 100%;
+  text-align: left;
+  font: bold 16px "Poppins SemiBold";
+
+  padding: 55px 100px;
+  margin-top: 80px;
+}
+
+.footer-distributed .footer-left,
+.footer-distributed .footer-center,
+.footer-distributed .footer-right {
+  display: inline-block;
+  vertical-align: top;
+}
+
+.footer-distributed .footer-left {
+  width: 40%;
+}
+
+.footer-distributed h3 {
+  color: #ffffff;
+  font: normal 36px "Poppins SemiBold";
+  margin: 0;
+}
+
+.footer-distributed h3 span {
+  color: $blue;
+}
+
+.footer-distributed .footer-links {
+  color: #ffffff;
+  margin: 20px 0 12px;
+  padding: 0;
+}
+
+.footer-distributed .footer-links a {
+  display: inline-block;
+  line-height: 1.8;
+  text-decoration: none;
+  color: inherit;
+}
+
+.footer-distributed .footer-company-name {
+  color: #8f9296;
+  font-size: 14px;
+  font-weight: normal;
+  margin: 0;
+}
+
+.footer-distributed .footer-center {
+  width: 35%;
+}
+
+.footer-distributed .footer-center i {
+  background-color: #33383b;
+  color: #ffffff;
+  font-size: 25px;
+  width: 38px;
+  height: 38px;
+  border-radius: 50%;
+  text-align: center;
+  line-height: 42px;
+  margin: 10px 15px;
+  vertical-align: middle;
+}
+
+.footer-distributed .footer-center i.fa-envelope {
+  font-size: 17px;
+  line-height: 38px;
+}
+
+.footer-distributed .footer-center p {
+  display: inline-block;
+  color: #ffffff;
+  vertical-align: middle;
+  margin: 0;
+}
+
+.footer-distributed .footer-center p span {
+  display: block;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 2;
+}
+
+.footer-distributed .footer-center p a {
+  color: $blue;
+  text-decoration: none;
+}
+
+.footer-distributed .footer-right {
+  width: 20%;
+}
+
+.footer-distributed .footer-company-about {
+  line-height: 20px;
+  color: #92999f;
+  font-size: 13px;
+  font-weight: normal;
+  margin: 0;
+}
+
+.footer-distributed .footer-company-about span {
+  display: block;
+  color: #ffffff;
+  font-size: 14px;
+  font-weight: bold;
+  margin-bottom: 20px;
+}
+
+@media (max-width: 880px) {
+  .footer-distributed {
+    font: bold 14px "Poppins SemiBold";
+  }
+
+  .footer-distributed .footer-left,
+  .footer-distributed .footer-center,
+  .footer-distributed .footer-right {
+    display: block;
+    width: 100%;
+    margin-bottom: 40px;
+    text-align: center;
+  }
+
+  .footer-distributed .footer-center i {
+    margin-left: 0;
+  }
+  .main {
+    line-height: normal;
+    font-size: auto;
+  }
+}
+
+input[type="text"],
+select,
+textarea {
+  width: 100%;
+  padding: 12px;
+  height: 100px;
+  border: 1px solid #ccc;
+  font-family: "Federant";
+  margin-top: 20px;
+  margin-bottom: 16px;
+  resize: vertical;
+}
+
+#send-email {
+  align-items: center;
+  justify-content: initial;
+  margin: 0;
+
+  &.white:hover > p {
+    color: $base;
+  }
+  &.white > p {
+    color: $white;
+    & span.base {
+      border: 1px solid transparent;
+    }
+  }
+}
+
+/* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+  .column,
+  input[type="submit"] {
+    width: 100%;
+    margin-top: 0;
   }
 }
