--- a/src/index.scss
+++ b/src/index.scss
@@ -1,8 +1,9 @@
-$base: #0f1923;
+$base: #1f2727;
 $white: #ece8e1;
+$darker-white: #d6d6d6;
 $pink: hsl(354, 42%, 80%);
-$blue: #f27405;
-$brown: #755139ff;
+$blue: #00f29c;
+$brown: #00f29c;
 $green: #ea7c7c;
 
 $purple: #3b3d54;
@@ -21,7 +22,6 @@ html {
 }
 
 body {
-  background: #2c2c2c;
   font-family: "Poppins SemiBold";
 }
 
@@ -43,7 +43,7 @@ a {
   font-smooth: always;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #2c2c2c;
+  background-color: $base;
   font-size: 14px;
 }
 
@@ -51,15 +51,13 @@ a {
   transform: translateZ(-500px) scale(5);
   z-index: 1;
   text-align: center;
-  color: white;
+  color: $blue;
   top: 10%;
   font-size: 16px;
-  mix-blend-mode: exclusion;
 }
 
 .layer {
-  animation: fadeInUp 2s ease 0s 1 normal forwards;
-
+  animation: heartBeat 2s;
   position: absolute;
   right: 0;
   bottom: 0;
@@ -87,7 +85,7 @@ a {
 }
 
 .content {
-  background: #d6d6d6;
+  background: #121818;
   color: white;
   display: block;
   position: absolute;
@@ -98,31 +96,6 @@ a {
   height: fit-content;
   z-index: 30;
   text-align: center;
-}
-
-.column-2 {
-  color: #d6d6d6;
-  float: left;
-  width: 45%;
-  padding: 40px;
-  padding-left: 70px;
-  padding-right: 70px;
-  margin: 30px;
-  margin-right: 30px;
-  margin-left: 100px;
-  background: linear-gradient(-45deg, #270c25, #e73c7e, #00c573, #007038);
-  background-size: 400% 400%;
-  animation: gradient 15s ease infinite;
-  line-height: 2;
-  border-radius: 200px;
-
-  p {
-    mix-blend-mode: normal;
-  }
-}
-
-.purple {
-  color: #755139ff;
 }
 
 @font-face {
@@ -139,7 +112,7 @@ a {
   font-size: 30px;
   font-family: "Federant";
   letter-spacing: 1px;
-  color: #fff;
+  color: rgb(255, 255, 255);
   -webkit-font-smoothing: antialiased;
 }
 
@@ -150,7 +123,7 @@ a {
 }
 
 #red {
-  color: $blue;
+  color: $darker-white;
 }
 
 .header {
@@ -176,7 +149,7 @@ nav {
   justify-content: space-between;
   align-items: center;
   padding: 30px 30px;
-  mix-blend-mode: exclusion;
+  mix-blend-mode: difference;
 }
 
 nav .nav-links ul {
@@ -195,11 +168,11 @@ nav .nav-links ul li img {
 
 .sidenav {
   height: 100%;
-  width: 160px;
+  width: 100px;
   position: fixed;
   z-index: 1;
   top: 0;
-  left: 0;
+  right: 0;
   background-color: transparent;
   clear: both;
   display: inline-block;
@@ -237,7 +210,7 @@ nav .nav-links ul li img {
   70%,
   100% {
     opacity: 0.99;
-    text-shadow: 0 0 5px #233142;
+    text-shadow: 0 0 5px $base;
   }
   20%,
   21.999%,
@@ -428,19 +401,15 @@ $transition: 0.3s ease-out all;
     padding: 8px;
     font-size: 0.8rem;
     font-weight: 900;
-    color: $pink;
     text-align: center;
     text-transform: uppercase;
     text-decoration: none;
     box-shadow: 0 0 0 1px inset rgba($brown, 0.3);
     position: relative;
     margin: 10px 0;
-    &.white:hover > p {
-      color: $base;
-    }
     &.white > p {
-      background: $brown;
-      color: $white;
+      background: $darker-white;
+      color: $base;
       & span.base {
         border: 1px solid transparent;
       }
@@ -482,7 +451,7 @@ $transition: 0.3s ease-out all;
       & span.bg {
         left: -5%;
         position: absolute;
-        background: $blue;
+        background: $brown;
         width: 0;
         height: 100%;
         z-index: 3;
@@ -523,27 +492,27 @@ $transition: 0.3s ease-out all;
 
 .icon-scroll,
 .icon-scroll:before {
-  filter: drop-shadow(0px 0px 10px $brown);
+  filter: drop-shadow(0px 0px 10px $blue);
 
   position: absolute;
   left: 50%;
 }
 .icon-scroll {
-  filter: drop-shadow(0px 0px 10px $brown);
+  filter: drop-shadow(0px 0px 10px $blue);
 
   width: 40px;
   height: 70px;
   margin-left: -20px;
   top: 80%;
   margin-top: -35px;
-  box-shadow: inset 0 0 0 1px $brown;
+  box-shadow: inset 0 0 0 1px $blue;
   border-radius: 25px;
   &:before {
-    filter: drop-shadow(0px 0px 10px $brown);
+    filter: drop-shadow(0px 0px 10px $blue);
     content: "";
     width: 8px;
     height: 8px;
-    background: $brown;
+    background: $blue;
     margin-left: -4px;
     top: 8px;
     border-radius: 4px;
@@ -733,6 +702,12 @@ $total: 10;
   }
 }
 
+footer {
+  .text {
+    color: $base !important;
+  }
+}
+
 input[type="text"],
 select,
 textarea {
@@ -768,5 +743,66 @@ textarea {
   input[type="submit"] {
     width: 100%;
     margin-top: 0;
+  }
+}
+
+.about-section {
+  background: url(./images/pfp.jpg) no-repeat left;
+  background-size: 45%;
+  overflow: hidden;
+  padding: 100px 0;
+  margin: 0 7% 0 7%;
+}
+
+.inner-container {
+  width: 65%;
+  float: right;
+  background-color: #1a2224;
+  padding: 150px;
+}
+
+.inner-container h1 {
+  margin-bottom: 30px;
+  font-size: 30px;
+  font-weight: 900;
+}
+
+.about-text {
+  font-size: 13px;
+  color: $blue;
+  line-height: 30px;
+  text-align: justify;
+  margin-bottom: 40px;
+}
+
+.skills {
+  display: flex;
+  justify-content: space-between;
+  font-weight: 700;
+  font-size: 13px;
+}
+
+@media screen and (max-width: 1200px) {
+  .inner-container {
+    padding: 80px;
+  }
+}
+
+@media screen and (max-width: 1000px) {
+  .about-section {
+    background-size: 100%;
+    padding: 100px 40px;
+  }
+  .inner-container {
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .about-section {
+    padding: 0;
+  }
+  .inner-container {
+    padding: 60px;
   }
 }
