Added CV to Download CV Button and Added Parallax to About Us

--- a/src/index.scss
+++ b/src/index.scss
@@ -5,7 +5,6 @@ $pink: hsl(354, 42%, 80%);
 $blue: #00f29c;
 $brown: #00f29c;
 $green: #ea7c7c;
-
 $purple: #3b3d54;
 
 $height: 54px;
@@ -48,6 +47,7 @@ a {
 }
 
 #layer1 {
+  mix-blend-mode: difference;
   transform: translateZ(-500px) scale(5);
   z-index: 1;
   text-align: center;
@@ -805,4 +805,65 @@ textarea {
   .inner-container {
     padding: 60px;
   }
+}
+
+.espacio {
+  height: 800px;
+}
+
+#js-scene {
+  width: 100%;
+  height: 100vh;
+  background: #333333;
+  overflow: hidden;
+}
+.layer p {
+  position: relative;
+  box-shadow: 0 32px 40px -20px rgba(0, 0, 0, 0.25);
+}
+
+.layer:nth-child(1) p {
+  width: 250px;
+  height: 250px;
+  z-index: 1;
+
+  top: calc(50vh - 20px);
+  left: calc(50vw + 50px);
+  background: #fff87f;
+}
+.layer:nth-child(2) p {
+  width: 200px;
+  height: 200px;
+
+  top: calc(50vh - 250px);
+  left: calc(50vw - 200px);
+
+  background: #eaf2e3;
+}
+.layer:nth-child(3) p {
+  width: 300px;
+  height: 300px;
+
+  top: calc(50vh - 170px);
+  left: calc(50vw - 230px);
+
+  background: #66d7d1;
+}
+.layer:nth-child(4) p {
+  width: 300px;
+  height: 300px;
+
+  top: calc(50vh - 300px);
+  left: calc(50vw + 25px);
+
+  background: #f4f1bb;
+}
+.layer:nth-child(5) p {
+  width: 200px;
+  height: 200px;
+
+  top: calc(50vh - 100px);
+  left: calc(50vw - 100px);
+
+  background: #ff637d;
 }
